--- a/core/Pipfile
+++ b/core/Pipfile
@@ -5,7 +5,8 @@ name = "pypi"
 
 [packages]
 django = "==4.0.4"
-psycopg2-binary = "*"
+psycopg2-binary = "2.9.3"
+djangorestframework = "3.13.1"
 
 [dev-packages]
 
