--- a/core/Pipfile
+++ b/core/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==4.0.4"
 psycopg2-binary = "2.9.3"
 djangorestframework = "3.13.1"
+django-cors-headers = "*"
 
 [dev-packages]
 
