--- a/front/content_mng/package.json
+++ b/front/content_mng/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "fuse.js": "^6.6.2",
+    "glob": "^7.2.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
